--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -50,6 +50,7 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
+    "raw-loader": "^0.5.1",
     "react-dev-utils": "^4.2.1",
     "spectacle": "^4.0.0",
     "style-loader": "0.19.0",
