--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -52,6 +52,7 @@
     "raf": "3.4.0",
     "raw-loader": "^0.5.1",
     "react-dev-utils": "^4.2.1",
+    "react-hot-loader": "^3.1.1",
     "spectacle": "^5.2.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
